@@ -22,6 +22,12 @@ package org.openremote.controller.rest;
 
 import org.jdom.*;
 import org.jdom.input.SAXBuilder;
+import java.text.SimpleDateFormat;
+import java.util.Date;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
 import org.openremote.controller.Constants;
 import org.openremote.controller.exception.ControlCommandException;
 import org.openremote.controller.exception.ControllerException;
@@ -214,12 +220,11 @@ public class StatusPollingRESTServlet extends RESTAPI {
       }
 
 
-      String url = request.getRequestURL().toString();
-      String regexp = "rest\\/polling\\/(.*?)\\/(.*)";
+      String regexp = "\\/(.*?)\\/(.*)";
       Pattern pattern = Pattern.compile(regexp);
-      Matcher matcher = pattern.matcher(url);
-      String unParsedSensorIDs = null;
-      
+      Matcher matcher = pattern.matcher(request.getPathInfo());
+      String unParsedSensorIDs;
+
       if (matcher.find()) {
          String deviceID = matcher.group(1);
          if (deviceID == null || "".equals(deviceID)) {
@@ -245,7 +250,7 @@ public class StatusPollingRESTServlet extends RESTAPI {
             sendResponse(request, response, e.getErrorCode(), e.getMessage());
          }
       } else {
-         sendResponse(request, response, ControlCommandException.INVALID_POLLING_URL, "Invalid polling url:"+url);
+          sendResponse(request, response, ControlCommandException.INVALID_POLLING_URL, "Invalid polling url:" + request.getRequestURL());
       }
    }
 
